
Sat May 15 17:25:17 2004  Marek Brudka  <mbrudka@elka.pw.edu.pl>

	* ace/SOCK_Dgram_Bcast.h:
	* ace/SOCK_Dgram_Bcast.cpp:
	  Fixed bug in mk_broadcast related with incorrect length of struct ifreq.
	  Thanks to Mirek Pabich <miropabich@tenbit.pl> for this patch.
	* ace/Time_Value.inl:
	  Fixed bug in operator *=( double ) which led to overflow for results
	  greater than 2 seconds. Thanks to Mirek Pabich <miropabich@tenbit.pl>
	  for this patch.
	* tests/SOCK_Dgram_Bcast_Test.cpp:
	  tests/tests.mpc:
	  test/run_test.lst:
	  New automatic test for checking against bugs similiar to those reported by
	  Mirek Pabich. The usability of the test is restricted, as some errors in
	  broadcast handling can be detected only in LAN transmission.
	* tests/tests.mpc:
	  MT_Reference_Counted_Event_Handler_Test project name truncated to
	  MT_Ref_Counted_Event_Handler_Test.

Fri May 14 22:13:13 2004  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* bin/MakeProjectCreator/config/event.mpb:

	  Reordered subprojects to force TAO_Messaging library to be
	  listed in static link commands after TAO_DynamicInterface
	  library.  The latter depends on the former.  Addresses static
	  build link-time errors.  Thanks to Chad for providing a patch.

Fri May 14 14:22:49 2004  Steve Huston  <shuston@riverace.com>

	* ace/Service_Repository.{h cpp} (insert): If there's no space left in
	  in the service repository, set errno to ENOSPC before returning -1.
	  (remove): Added an optional argument that can receive the
	  service record pointer for the removed service. If the pointer is
	  returned to the caller, it is not deleted. If the pointer is not
	  returned to the caller (the default) it is deleted (this is the
	  historic behavior). This is needed to properly support removing
	  a service record quickly after inserting it during service
	  initialization. See "Tue Mar 16 2004 <Ivan.Murphy@siemens.com>
	  ACE version 5.4 P4", below.
